[package]
name = "snow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = {version = "0.3", features = ["Performance", "Window", "CanvasRenderingContext2d", "console"]}
nalgebra = "0.29"
nalgebra-glm = "0.15"
rand = "0.8.4"
statrs = "0.15"

getrandom = {features = ["js"]}